# AJX

./: .gitignore  README.md  basics.ipynb  pyproject.toml
ajx/: __init__.py  definitions.py  environment.py  math.py  param.py  rigid_body.py  simulation copy.py  simulation.py  symbolic.py  tree_util.py
ajx/block_sparse/: base.py  csc_ldlt.py  svbd_matrix.py  vbc_matrix.py  vbr_matrix.py
ajx/constraints/: __init__.py  base.py  body_shaft_constraint.py  gear.py  hinge.py  one_body_constraint.py  prismatic.py  two_body_constraint.py  two_body_shaft_constraint.py
ajx/example_environments/: cartpole.py  dlo.py  environment.py  free_body.py  furuta.py  pendulum.py
ajx/example_graphics/: base.py  environment_scene.py  geometry.py
ajx/pre_step_modifiers/: __init__.py  axissymmetric_inertia.py  base.py  dc_motor.py  gain_motor.py  quadratic_damping.py  target_speed_motor.py  tilt_gravity.py
ajx/sensors/: __init__.py  absolute_rotation.py  base.py  distance_sensor.py  point_tracking_camera.py  rotary_encoder.py
environments/: __init__.py  cartpole.py  environment.py  free_body.py  furuta.py  pendulum.py
notebooks/: basics.ipynb
scenes/: arm1.bam  arm2.bam  axes.bam  axis.bam  base.bam  base.py  cartpole.py  dlo.py  free_body.py  furuta_pendulum.py
scenes/graphics/: default_scene.py  geometry.py
util/: deepinsert.py  parse_utils.py  save.py
